tests/errors/arrays/undefined-element-type.fn
---
Description: Array type with undefined element type
Expected: FN3000
---

type Program
{
    fn Main -> i32
    {
        var a: Foo[] = [1]
        return 0
    }
}
